# taskflow-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  api.py  cli.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  server.js  setup.py
backend/: models.py  persistence.py  project_service.py  task_service.py
frontend/: taskflow.html
taskflow_manager/: api.py  cli.py  mcp_server.py  server.js
taskflow_manager/backend/: models.py  persistence.py  project_service.py  task_service.py
taskflow_manager/frontend/: taskflow.html
taskflow_manager/test/: check_field_conflicts.py
